--- a/public-html/index.html
+++ b/public-html/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>LABORATORIO 17 - Expresiones y asincronía en JavaScript</h1>
+
+    <script src="scripts/script.js"></script>
 </body>
 </html>
